# CSweet.Agent.Sdk

./: CSweetAgentSdk.slnx  Create-NuGetPackages.bat  GRANTS.md  LICENSE  README.md  SECURITY.md
.github/workflows/: publish.yml
docs/: creating-an-agent.md
python/: README.md  pyproject.toml
python/csweet_agent_sdk/: __init__.py  mcp.py
python/tests/: test_mcp.py
samples/HelloAgent/: HelloAgent.csproj  Program.cs
src/CSweet.Agent.SDK/: AgentActivationContext.cs  AgentConfigurationContracts.cs  AgentConfigurationDefinition.cs  AgentIdentity.cs  AgentManifest.cs  AgentManifestLoader.cs  AgentRuntimeContext.cs  AgentRuntimeWorker.cs  BrokerLlmClient.cs  CSweet.Agent.SDK.csproj  CSweetAgentBase.cs  CapabilityCatalog.cs  DependencyInjection.cs  GrpcAgentBrokerClient.cs  IAgentBrokerClient.cs  ICSweetAgent.cs  McpRegistration.cs  PlatformCapabilities.cs  PlatformCapabilityClient.cs  PlatformContracts.cs  PlatformToolAdapters.cs  agent_broker.proto
tests/CSweet.Agent.SDK.Tests/: AgentManifestLoaderTests.cs  BrokerLlmClientTests.cs  CSweet.Agent.SDK.Tests.csproj  CapabilityCatalogTests.cs  DependencyInjectionTests.cs  PlatformCapabilityClientTests.cs
